# claude-usage

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml  release.yml
claude_prospector/: __init__.py  __main__.py  paths.py  skill_tracking.py
claude_prospector/cli/: __init__.py  config.py  dashboard.py  session_summary.py
claude_usage/: aggregator.py  constants.py  models.py  parser.py
claude_usage/cli/: session_summary.py
commands/: usage-dashboard.md
docs/: design.md  release-process.md
docs/decisions/: 2026-05-14-baseline-flat-methodology-gap.md
docs/superpowers/plans/: 2026-05-13-issue-41-nested-agent-attribution-plan.md  2026-05-18-pattern-w-adoption-prospector.md
docs/superpowers/specs/: 2026-05-17-67-one-step-plugin-update.md  2026-05-17-pattern-w-adoption-prospector.md
hooks/: check-prospector-setup.py  dashboard-regen.py  hooks.json  skill-tracker.py
hooks/lib/: setup_state.py
skills/claude-audit/: SKILL.md
skills/setup-prospector/: SKILL.md
skills/usage-analysis/: SKILL.md
skills/usage-dashboard/: SKILL.md
src/claude_prospector/: aggregator.py  constants.py  parser.py  paths.py  renderer.py  skill_tracking.py
src/claude_prospector/cli/: config.py
src/claude_prospector/templates/: dashboard.html
tests/: conftest.py  test_aggregator.py  test_aggregator_adoption.py  test_cli.py  test_cli_config.py  test_cli_subcommands.py  test_dashboard_regen_hook.py  test_dashboard_snapshot.py  test_e2e.py  test_models.py  test_parser.py  test_paths.py  test_phase1_fixtures.py  test_renderer.py  test_session_summary.py  test_skill_pipeline_sync.py  test_skill_tracker_hook.py  test_skill_tracking.py  test_template_resource.py  test_version_flag.py
tests/fixtures/: dashboard_snapshot_pre_refactor.json
tests/fixtures/session_summaries/: consecutive_edits_same_file.jsonl  happy_path.jsonl  max_tokens_stop.jsonl  mcp_both_forms.jsonl  (+5 more)
tests/integration/: setup_pipeline.py  test_setup_skill.py
tests/unit/: test_check_prospector_setup.py  test_dashboard_regen_guard.py  test_setup_state.py  test_skill_tracker_guard.py
