[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-prospector"
version = "0.4.0"
description = "Parse Claude Code session data and generate an interactive HTML usage dashboard"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.6.0",
    "pytest~=8.0",
]

[tool.setuptools.packages.find]
include = ["claude_prospector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
