[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-prospector"
version = "0.7.1"
description = "Claude Code token usage analyzer with optimization recommendations. Surfaces what's eating your budget across the 5h / 7d / Sonnet-7d billing windows, with per-model and nested per-agent attribution and skill adoption tracking. Ships both an interactive dashboard and a conversational analysis skill."
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.6.0",
    "pytest~=8.0",
]

[tool.setuptools.packages.find]
include = ["claude_prospector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
