[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-prospector"
version = "0.8.0"
description = "Claude Code efficiency and hygiene toolkit. Surfaces token spend across the 5h / 7d / Sonnet-7d billing windows with per-model / per-agent / per-skill attribution, and audits your effective Claude Code configuration (custom + plugin agents and skills) for overlap and conflicts. Ships an interactive dashboard, a conversational usage-analysis skill, and a structured config-audit skill."
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.6.0",
    "pytest~=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_prospector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
